--- a/choreopleth.html
+++ b/choreopleth.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+<link rel="stylesheet" type="text/css" href="./stylesheet.css"/>
 <link rel="icon" href="favicon.ico"/>
 
 <body/>
