--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-servus i bims
+<!DOCTYPE html>
+<html>
+  <head>
+    <script src="p5.js"></script>
+    <script src="math.js"></script>
+    <link rel="stylesheet" type="text/css" href="style/css">
+    <meta charset="utf-8"/>
+  </head>
+  
+  <body>
+    <script src="mandelbrot.js"></script>
+  </body>
+</html>
